--- a/NFFT.bib
+++ b/NFFT.bib
@@ -1,9 +1,10 @@
-@article{knopp2022nfft,
- 	author = {Knopp, T. and Boberg, M. and Grosser, M.},
- 	title = {{NFFT.jl}: Generic and Fast Julia Implementation of the Nonequidistant
- Fast {Fourier} Transform},
- 	year = {2022},
-  url      = {http://arxiv.org/abs/2208.00049},
-  pages   = {2208.00049},
-  journal  = {ArXiv e-prints},
- }
+@article{knopp2023nfft,
+  title={{NFFT.jl}: Generic and Fast Julia Implementation of the Nonequidistant Fast {Fourier} Transform},
+  author={Knopp, Tobias and Boberg, Marija and Grosser, Mirco},
+  journal={SIAM Journal on Scientific Computing},
+  volume={45},
+  number={3},
+  pages={C179--C205},
+  year={2023},
+  publisher={SIAM}
+}
